# OpenScholar

./: .gitignore  README.md  env_requirements.txt  environment.lock.yml  fetch_papers_simple.py  input.json  main.py  pixi.toml  pretty_print.py  pyproject.toml  tests.ipynb
environments/: build_indices_and_search.yml  requirements.in  requirements.txt
outputs/0/: test_retrieved_results.jsonl
papers/: baumert2014.json  dalland1993.json  diels2004.json  matthews1992.json  mattsson2014.json  sample.json  sharma2023.json  singh2019.json  tumwebaze2011.json
processed_json/: baumert2014.json  sharma2023.json
processed_papers/embeddings/: passages_00.pkl
processed_papers/normalized_jsonl/: normalized_input.jsonl
processed_papers/passages/: raw_passages-0-of-1.pkl
queries/: test.jsonl
retriever/: README.md  build_pes2o_index.md  environment.yml  instructions.md  run_chunk_and_embed.py  working_environment.yml
retriever/api/: README.md  passage_utils.py  pes2o_ds.py  serve_pes2o.py
retriever/api/conf/: pes2o.yaml
retriever/contriever/: eval_beir.py  evaluate_retrieved_passages.py  finetuning.py  passage_retrieval.py  preprocess.py  requirements.txt  train.py
retriever/contriever/src/: beir_utils.py  (+6 more)
retriever/ric/: main_ric.py
retriever/src/: build_indices_and_search.py  data.py  decontamination.py  embed.py  evaluate_perplexity.py  hydra_runner.py  index.py  search.py
retriever/utils/: dedup_eval_data.py  deduplication.py  extract_results.py  subsample_data_new.py  timing.py
src/: html_to_passages.py  open_scholar.py  script.py  use_search_apis.py
(+14 files in other folders)
